unpackaged/main/default/objects/Proprietary_Account_Contact__c/Proprietary_Account_Contact__c.object-meta.xml
<CustomObject>
    <label>Proprietary Account Contact</label>
    <nameField>
        <label>Proprietary Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proprietary Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>