unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Additional_Dist_List_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Dist_List_Email_Addresses__c</fullName>
    <description>Additional email addresses to cc when corresponding with this contact.</description>
    <inlineHelpText>Additional people that should receive email communication, when specifying more than one email, separate each valid email address with a comma.</inlineHelpText>
    <label>Additional Dist List Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>