unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Account Contacts (Contact)</relationshipLabel>
    <relationshipName>Proprietary_Account_Contacts1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>