unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>