unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Group_Listserv_Access__c.field-meta.xml
<CustomField>
    <fullName>Group_Listserv_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Setup for Listserv Access</label>
    <type>Checkbox</type>
</CustomField>