unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Is_Member_Code__c.field-meta.xml
<CustomField>
    <fullName>Is_Member_Code__c</fullName>
    <formula>OR(
        ISPICKVAL( Contact_Type__c , &quot;Member&quot;),
        ISPICKVAL( Contact_Type__c , &quot;Alternate Member&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Member (Code)</label>
    <type>Checkbox</type>
</CustomField>