unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/List_Serv_Access__c.field-meta.xml
<CustomField>
    <fullName>List_Serv_Access__c</fullName>
    <formula>AND(
 Proprietary_Account__r.Proprietary_Group__r.Group_List_Serv__c,
 ISPICKVAL( Proprietary_Account__r.Proprietary_Group__r.Status__c, &quot;Active&quot;),
 ISPICKVAL( Proprietary_Account__r.Status__c, &quot;Active&quot;),
 Group_Listserv_Access__c,
 ISPICKVAL( Status__c, &quot;Active&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Serv Access</label>
    <type>Checkbox</type>
</CustomField>