unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/List_Serv_Change__c.field-meta.xml
<CustomField>
    <fullName>List_Serv_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List Serv Change</label>
    <type>Checkbox</type>
</CustomField>