unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Preferred_Title__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Title__c</fullName>
    <label>Preferred Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>