unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Proprietary_Account__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Account__c</fullName>
    <label>Proprietary Account</label>
    <referenceTo>Proprietary_Account__c</referenceTo>
    <relationshipLabel>Proprietary Account Contacts</relationshipLabel>
    <relationshipName>Proprietary_Account_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>