unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Group</label>
    <referenceTo>Proprietary_Group__c</referenceTo>
    <relationshipLabel>Proprietary Account Contacts</relationshipLabel>
    <relationshipName>Proprietary_Account_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>