unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/ProprietaryAccountContactID_18__c.field-meta.xml
<CustomField>
    <fullName>ProprietaryAccountContactID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProprietaryAccountContactID(18)</label>
    <type>Text</type>
</CustomField>