unpackaged/main/default/objects/Proprietary_Account_Contact__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Account Contacts</relationshipLabel>
    <relationshipName>Proprietary_Account_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>