unpackaged/main/default/objects/Proprietary_Account_Contact__c/recordTypes/Proprietary_Contact.recordType-meta.xml
<RecordType>
    <fullName>Proprietary_Contact</fullName>
    <active>true</active>
    <label>Proprietary Contact</label>
</RecordType>