unpackaged/main/default/objects/Proprietary_Account_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Proprietary_Account__c</columns>
    <columns>NAME</columns>
    <columns>Contact_Type__c</columns>
    <columns>Is_Member_Code__c</columns>
    <columns>Display_Order__c</columns>
    <columns>List_Serv_Access__c</columns>
    <columns>Proprietary_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>